--- a/root/_includes/head.html
+++ b/root/_includes/head.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-    {%seo%}
+     {%- comment -%}{%seo%}{%- endcomment -%}
 
     <!-- Discovery -->
     <link rel="alternate" title="{{site.title}}" type="application/rss+xml" href="{{site.url}}/feed.xml" />
